Bugs: too much results and tabs do not work.

--- a/fuzzy_logic/flese/WebContent/js_and_css/style.css
+++ b/fuzzy_logic/flese/WebContent/js_and_css/style.css
@@ -242,6 +242,9 @@ a.indexPageImportantLink:visited, a.indexPageImportantLink:hover {
 .queryLinesAggregatorTableRow {display:table-row; border:0.1em solid grey; width:70%; text-align:left; padding:0.1em;}
 .queryLinesAggregatorTableCell {display:table-cell; border:0.1em solid grey; width:70%; text-align:left; padding:0.1em;}
 
+.queryAnswersTable{display:table; border:0.1em solid #000000; width:90%; margin:1em; text-align:center;}
+.queryAnswersTableRow {display:table-row; border:0.1em solid grey; width:70%; text-align:left; padding:0.1em;}
+.queryAnswersTableCell {display:table-cell; border:0.1em solid grey; width:70%; text-align:left; padding:0.1em;}
 
 
 
